# memory_gen

./: CMakeLists.txt  README.md
cmake/: FindTSMC90Memory.cmake
src/: infer.sv.in  lib2db.tcl  lib2db.tcl.in  regfile_1p.spec.in  sram_1p.spec.in  wrapper.sv.in
